--- a/pages/treatments.html
+++ b/pages/treatments.html
@@ -1,7 +1,3 @@
-//list treatments, description, timing and prices
-//button to reserve treatment
-//two categories : classic treatments and vip/privitizations
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roma | liste des soins</title>
     <link rel="stylesheet" href="/styles/treatments.css">
+    <link rel="stylesheet" href="/styles/footer.css">
     <script src="/scripts/treatments.js" defer></script>
+    <script src="/scripts/footer.js" defer></script>
 </head>
 <body>
 
@@ -24,39 +22,13 @@
         <h3>Les soins classiques</h3>
 
         <!-- pricing list -->
-        <div class="pricing-list">
-
-            <div class="left-side">
-                <h4>name of treatment</h4>
-                <p>description</p>
-            </div>
-
-            <div class="right-side">
-                <p>90 minutes</p>
-                <p>120 €</p>
-                <button>Réserver</button>
-            </div>
-
-        </div>
+        <div class="pricing-list"></div>
 
         <!-- regular pricing list category title -->
         <h3>Les expériences exceptionnelles</h3>
 
         <!-- VIP privitization pricing list -->
-        <div class="vip-pricing-list">
-            
-            <div class="left-side">
-                <h4>name of treatment</h4>
-                <p>description</p>
-            </div>
-
-            <div class="right-side">
-                <p>90 minutes</p>
-                <p>120 €</p>
-                <button>Réserver</button>
-            </div>
-
-        </div>
+        <div class="vip-pricing-list"></div>
 
     </main>
 
