product pages started, not finished. ready for testing

--- a/pages/treatments.html
+++ b/pages/treatments.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,7 +16,7 @@
     
     <main>
         <!-- main title -->
-        <h2>Le plaisir chez soi</h2>
+        <h2>Quel soin vous ferez plaisir ?</h2>
 
         <!-- regular pricing list category title -->
         <h3>Les soins classiques</h3>
