log in pages created. must work on js.

--- a/pages/log-in.html
+++ b/pages/log-in.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles/log-in.css">
+    <link rel="stylesheet" href="/styles/footer.css">
+    <script src="/scripts/log-in.js" defer></script>
+    <script src="/scripts/footer.js" defer></script>
+    <title>Roma | Log-in</title>
+</head>
+<body>
+    
+    <header></header>
 
+    <main>
+
+        <div class="card">
+
+            <div class="log-in">
+                
+                <label for="user-email">Adresse mail</label>
+                <input type="email" name="user-email" id="user-email">
+
+                <label for="user-password">Mot de passe</label>
+                <input type="password" name="user-password" id="user-password">
+
+                <button id="connecter">Se Connecter</button>
+                <a href="mdp-oublie.html">Mot de passe oublié</a>
+
+            </div>
+
+            <div class="sign-up">
+                <p>Créer un compte</p>
+                <button id="inscrire">S'inscrire</button>
+            </div>
+
+        </div>
+
+    </main>
+
+    <footer></footer>
+
+</body>
+</html>
