problem with account.html

--- a/pages/account.html
+++ b/pages/account.html
@@ -27,6 +27,10 @@
 
         <div class="selected-products">
             
+            <div class="empty-cart">
+                <button id="descover-products"><a href="/pages/products.html">Découvrir nos produits</a></button>
+            </div>
+
             <div class="full-cart">
                 <h3>Voici les produits dans votre panier:</h3>
 
@@ -42,13 +46,13 @@
 
         <div class="reservation">
 
-            <form action="">
+            <form>
 
-                <div class="reserve-inactive">
+                <div id="reserve-inactive">
                     <button id="reserve-treatment">Réserver un soin</button>
                 </div>
 
-                <div class="reserve-active">
+                <div id="reserve-active">
                     <label for="treatment-date">Date préférée</label>
                     <input type="date" name="treatment-date" id="treatment-date">
 
