user account update

--- a/pages/account.html
+++ b/pages/account.html
@@ -48,24 +48,7 @@
 
             <h2>Bievenue!</h2>
 
-            <div class="selected-products">
-
-                <div class="empty-cart" style="display: block;">
-                    <button id="descover-products"><a href="/pages/products.html">Découvrir nos produits</a></button>
-                </div>
-
-                <div class="full-cart" style="display: none;">
-                    <h3>Voici les produits dans votre panier:</h3>
-
-                    <p>Product Name</p>
-                    <p>Product Price</p>
-
-                    <p>Number of products in cart</p>
-                    <p>Total price</p>
-                
-                    <button id="pay">Régler</button>
-                </div>
-            </div>
+            <div class="selected-products"></div>
 
             <div class="reservation">
 
