improved login pages, account pages

--- a/pages/account.html
+++ b/pages/account.html
@@ -16,27 +16,7 @@
 
     <main>
 
-        <section class="logged-out" style="display: block;">
-            <div class="log-in">
-
-                <label for="user-email">Adresse mail</label>
-                <input type="email" name="user-email" id="user-email">
-
-                <label for="user-password">Mot de passe</label>
-                <input type="password" name="user-password" id="user-password">
-
-                <button id="login">Se Connecter</button>
-                <a href="mdp-oublie.html">Mot de passe oublié</a>
-
-            </div>
-
-            <div class="sign-up">
-                <p>Créer un compte</p>
-                <button id="signup">S'inscrire</button>
-            </div>
-        </section>
-
-        <section class="logged-in" style="display: none;">
+        <section class="logged-in">
             <div class="tabs">
                 <button id="user-address">Adresses</button>
                 <button id="user-payment">Moyens de paiement</button>
@@ -46,7 +26,7 @@
 
             </div>
 
-            <h2>Bievenue!</h2>
+            <h2></h2>
 
             <div class="selected-products"></div>
 
