updated products docs. must finish treatment reservation on account page

--- a/pages/products.html
+++ b/pages/products.html
@@ -26,7 +26,7 @@
         <div class="special-offer">
             <div class="card">
                 <p>❤ Pour faire plaisir à maman ❤ </p>
-                <p>blahblahblahlksdjflkqjsdlkfjlksfjqlksfklqsdjkfljksdqjfkj</p>
+                <p>Offrez-lui une boîte à trésors.</p>
             </div>
         </div>
 
