update product pages, account pages

--- a/pages/products.html
+++ b/pages/products.html
@@ -25,15 +25,15 @@
         <!-- pricing list -->
         <div class="special-offer">
             <div class="card">
-                <p>❤ Pour faire plaisir à maman ❤ </p>
-                <p>Offrez-lui une boîte à trésors.</p>
+                <p id="card-title">Merveilleuse Maman </p>
+                <p id="card-baseline">Une boîte à trésors pour la lumière de votre vie.</p>
             </div>
         </div>
 
         <!-- section des produits en vente -->
         <h3>Nos produits phares</h3>
 
-        <!-- VIP privitization pricing list -->
+        <!-- pricing list -->
         <div class="product-list"></div>
 
     </main>
