--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -1,4 +1,13 @@
-// photo gallery
-// of place
-// of offers
-// of events
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Roma | produits pour chez vous</title>
+    <link rel="stylesheet" href="/styles/gallery.css">
+    <link rel="stylesheet" href="/styles/footer.css">
+    <script src="/scripts/gallery.js" defer></script>
+    <script src="/scripts/footer.js" defer></script>
+</head>
+<body>
