--- a/pages/account.html
+++ b/pages/account.html
@@ -30,11 +30,15 @@
             <h2></h2>
             <div class="selected-products"></div>
             <button id="reserve-treatment">Réserver un soin</button>
+            <p class="message-sent" id="hide-div" style="display: none;">Votre message a été envoyé</p>
         </div>
 
         <!-- pop up window to reserve a treatment-->
-        <div class="container">
-            <form id="reserve" class="form">
+        <div class="container" id="myModal">
+
+            <span class="close">&times;</span>
+
+            <form id="reserve" class="form edit-user-form">
                 <h1>Faire votre demande de réservation via ce formulaire</h1>
                 <div class="form-field">
                     <label for="treatment-date">Date préférée</label>
