--- a/pages/index.html
+++ b/pages/index.html
@@ -43,7 +43,7 @@
             <div class="gallery-card">
                 <h2>Visitez notre gallerie d'images</h2>
             </div>
-            <img src="/assets/images/backgrounds/pool-snow-mountains.jpeg" alt="">
+            <img src="/assets/images/backgrounds/lounge-view-pool-mountains-2 (1).jpg" alt="">
             
         </section>
 
