--- a/pages/account.html
+++ b/pages/account.html
@@ -30,7 +30,7 @@
             <h2></h2>
             <div class="selected-products"></div>
             <button id="reserve-treatment">Réserver un soin</button>
-            <p class="message-sent" id="hide-div" style="display: none;">Votre message a été envoyé</p>
+            <p class="message-sent" style="visibility: hidden;">Votre message a été envoyé</p>
         </div>
 
         <!-- pop up window to reserve a treatment-->
