dropdown menus are almost finished on account reservation form. still a bug or two to clear up.

--- a/pages/account.html
+++ b/pages/account.html
@@ -61,14 +61,7 @@
     
                 <div class="form-field">
                     <label for="treatment">Soin</label>
-                    <select name="treatment" id="treatment">
-                        <option value="facial">Soins du visage</option>
-                        <option value="body-scrub">Gommages du corps</option>
-                        <option value="massage">Massages</option>
-                        <option value="grand-ritual">Les Grands Rituels</option>
-                        <option value="grand-ritual">Soins en duo</option>
-                        <option value="grand-ritual">Privatisations</option>
-                    </select>
+                    <select name="treatment" id="treatment"></select>
                     <small></small>
                 </div>
     
