added header to all pages. assembled one index.html, script.js et style.css

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roma | produits pour chez vous</title>
     <link rel="stylesheet" href="/styles/gallery.css">
+    <link rel="stylesheet" href="/styles/header.css">
     <link rel="stylesheet" href="/styles/footer.css">
     <script src="/scripts/gallery.js" defer></script>
+    <script src="/scripts/header.js" defer></script>
     <script src="/scripts/footer.js" defer></script>
 </head>
 <body>
