--- a/pages/log-in.html
+++ b/pages/log-in.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/styles/log-in.css">
     <link rel="stylesheet" href="/styles/footer.css">
     <script src="/scripts/log-in.js" defer></script>
+    <script src="/scripts/header.js" defer></script>
     <script src="/scripts/footer.js" defer></script>
     <title>Roma | Log-in</title>
 </head>
