--- a/pages/index copy.html
+++ b/pages/index copy.html
@@ -36,7 +36,7 @@
             </div>
             <div class="products">
                 <a href="/pages/products.html">
-                    <p>Nos produits dans un clickLa beauté chez vous</p>
+                    <p>Nos produits dans un click</p>
                 </a>
             </div>
         </section>
