--- a/pages/treatments.html
+++ b/pages/treatments.html
@@ -18,7 +18,7 @@
     
     <main>
         <!-- main title -->
-        <h2>Quel soin vous ferez plaisir ?</h2>
+        <h2>La liste de nos soins :</h2>
 
         <!-- regular pricing list category title -->
         <h3>Les soins classiques</h3>
