--- a/pages/log-in.html
+++ b/pages/log-in.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/log-in.css">
+    <link rel="stylesheet" href="/styles/header.css">
     <link rel="stylesheet" href="/styles/footer.css">
     <script src="/scripts/log-in.js" defer></script>
     <script src="/scripts/header.js" defer></script>
