hash function works

--- a/pages/index.html
+++ b/pages/index.html
@@ -25,18 +25,19 @@
 
         <section class="offers">
             <div class="treatments">
-                <a href="/pages/treatments.html">
+                <a href="/pages/treatments.html#classiques">
                     <p>Parcourir nos soins classiques</p>
                 </a>
             </div>
-            <div class="vip-treatments">
-                <a href="/pages/treatments.html">  
+            
+            <div class="vip-treatments" >
+                <a href="/pages/treatments.html#vip">
                     <p>Découvrez les expériences VIP ?</p>
                 </a>
             </div>
             <div class="products">
                 <a href="/pages/products.html">
-                    <p>Nos produits dans un clickLa beauté chez vous</p>
+                    <p>Nos produits dans un click</p>
                 </a>
             </div>
         </section>
