--- a/pages/treatments.html
+++ b/pages/treatments.html
@@ -20,15 +20,19 @@
         <!-- main title -->
         <h2>La liste de nos soins :</h2>
 
-        <!-- regular pricing list category title -->
-        <h3>Les soins classiques</h3>
+        <a href="#classique" id="classique">
+            <!-- regular pricing list category title -->
+            <h3>Les soins classiques</h3>
+        </a>
 
         <!-- pricing list -->
         <div class="pricing-list"></div>
 
-        <!-- regular pricing list category title -->
-        <h3>Les expériences exceptionnelles</h3>
-
+        <a href="#vip" id="vip">
+            <!-- regular pricing list category title -->
+            <h3>Les expériences exceptionnelles</h3>
+        </a>
+        
         <!-- VIP privitization pricing list -->
         <div class="vip-pricing-list"></div>
 
