logged in logged out ok

--- a/pages/index.html
+++ b/pages/index.html
@@ -25,7 +25,7 @@
 
         <section class="offers">
             <div class="treatments">
-                <a href="/pages/treatments.html#classiques">
+                <a href="/pages/treatments.html#classique">
                     <p>Parcourir nos soins classiques</p>
                 </a>
             </div>
