updates to product pages completed

--- a/pages/products.html
+++ b/pages/products.html
@@ -15,12 +15,9 @@
     <header></header>
 
     <main>
-        <!-- main title -->
         
-
-        <!-- espace offre du mois
-        <h3>L'offre du mois</h3> -->
-        <a href="../pages/account.html">return to account</a>
+        <!-- espace offre du mois -->
+        <h3>L'offre du mois</h3>
 
         <!-- pricing list -->
         <div class="special-offer">
@@ -31,16 +28,16 @@
         <h3>Nos produits phares</h3>
 
         <!--Filtre de recherche-->
-        <label for="category">Choix par catégorie :</label>
+        <label for="category">Filtrer par :</label>
 
-<select name="product" id="product-select">
-    <option value="none">--choix de la catégorie--</option>
-    <option value="kit">Kit de soins</option>
-    <option value="visage">Visage</option>
-    <option value="body">corps</option>
-    <option value="parfum">Fragrances</option>
+        <select name="product" id="product-select">
+            <option value="none">catégorie</option>
+            <option value="kit">Kit de soins</option>
+            <option value="visage">Visage</option>
+            <option value="body">Corps</option>
+            <option value="parfum">Fragrances</option>
 
-</select>
+        </select>
 
 
         <!-- VIP privitization pricing list -->
