--- a/pages/index.html
+++ b/pages/index.html
@@ -19,7 +19,7 @@
     <main>
 
         <section class="introduction">
-            <h1>Roma</h1>
+            <h1>Spa ROMA</h1>
             <p>Le spa Roma est l’une des plus belles oasis de bien-être de Suisse. Dans la piscine extérieure chauffée à 34° C avec vue sur les montagnes et le lac, vous découvrirez chaque saison d’une perspective unique. Les réservations pour l'entrée individuelle sont bienvenues ici. Les entrées seront libérées au plus tôt une semaine à deux jours à l’avance. En fonction du taux d’occupation de l’hôtel. Si vous avez un bon cadeau pour le spa, veuillez nous contacter par téléphone au +41 41 618 32 00.</p>
         </section>
 
@@ -32,12 +32,12 @@
             
             <div class="vip-treatments" >
                 <a href="/pages/treatments.html#vip">
-                    <p>Découvrez les expériences VIP ?</p>
+                    <p>Découvrez les expériences VIP</p>
                 </a>
             </div>
             <div class="products">
                 <a href="/pages/products.html">
-                    <p>Nos produits dans un click</p>
+                    <p>Nos produits phares dans un click</p>
                 </a>
             </div>
         </section>
