--- a/pages/index.html
+++ b/pages/index.html
@@ -25,18 +25,18 @@
 
         <section class="offers">
             <div class="treatments">
-                <a href="/pages/treatments.html#classique">
+                <a href="../pages/treatments.html#classique">
                     <p>Parcourir nos soins classiques</p>
                 </a>
             </div>
             
             <div class="vip-treatments" >
-                <a href="/pages/treatments.html#vip">
+                <a href="../pages/treatments.html#vip">
                     <p>Découvrez les expériences VIP</p>
                 </a>
             </div>
             <div class="products">
-                <a href="/pages/products.html">
+                <a href="../pages/products.html">
                     <p>Nos produits phares dans un click</p>
                 </a>
             </div>
@@ -46,7 +46,7 @@
             <div class="gallery-card">
                 <h2>Visitez notre gallerie d'images</h2>
             </div>
-            <img src="/assets/images/backgrounds/lounge-view-pool-mountains-2 (1).jpg" alt="">
+            <img src="../assets/images/backgrounds/lounge-view-pool-mountains-2 (1).jpg" alt="">
             
         </section>
 
