--- a/pages/log-in.html
+++ b/pages/log-in.html
@@ -46,7 +46,7 @@
 
             <div class="sign-up-new-user">
                 <p>Créer un compte</p>
-                <button id="sign-up-new-user"><a href="sign-up.html">S'inscrire</a></button>
+                <button id="sign-up-new-user"><a href="../pages/log-in.html">S'inscrire</a></button>
             </div>
 
         </div>
