--- a/pages/products.html
+++ b/pages/products.html
@@ -21,7 +21,7 @@
 
         <!-- pricing list -->
         <div class="special-offer">
-                <img src="/assets/images/products/mothersday.jpg" alt="fête des mères" class="motherday">
+                <img src="../assets/images/products/mothersday.jpg" alt="fête des mères" class="motherday">
         </div>
 
         <!-- section des produits en vente -->
