--- a/pages/treatments.html
+++ b/pages/treatments.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roma | liste des soins</title>
-    <link rel="stylesheet" href="/styles/treatments.css">
-    <link rel="stylesheet" href="/styles/header.css">
-    <link rel="stylesheet" href="/styles/footer.css">
-    <script src="/scripts/treatments.js" defer></script>
-    <script src="/scripts/header.js" defer></script>
-    <script src="/scripts/footer.js" defer></script>
+    <link rel="stylesheet" href="../styles/treatments.css">
+    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../styles/footer.css">
+    <script src="../scripts/treatments.js" defer></script>
+    <script src="../scripts/header.js" defer></script>
+    <script src="../scripts/footer.js" defer></script>
 </head>
 <body>
 
