--- a/pages/index.html
+++ b/pages/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/style.css">
-    <link rel="stylesheet" href="/styles/header.css">
-    <link rel="stylesheet" href="/styles/footer.css">
-    <script src="/scripts/script.js" defer></script>
-    <script src="/scripts/header.js" defer></script>
-    <script src="/scripts/footer.js" defer></script>
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../styles/footer.css">
+    <script src="../scripts/script.js" defer></script>
+    <script src="../scripts/header.js" defer></script>
+    <script src="../scripts/footer.js" defer></script>
     <title> Roma Spa</title>
 </head>
 <body>
