--- a/pages/index.html
+++ b/pages/index.html
@@ -78,10 +78,10 @@
 
             <div class="carousel-wrapper">
                 <div class="carousel">
-                    <img class="carousel__photo initial" src="../assets/images/destinations/syracuse.jpg">
-                    <img class="carousel__photo" src="../assets/images/destinations/Mykonos.jpg">
-                    <img class="carousel__photo" src="../assets/images/destinations/norvege.jpeg">
-                    <img class="carousel__photo" src="../assets/images/destinations/guadeloupe.jpg">
+                    <img class="carousel__photo initial" src="../assets/images/destinations/sous-les-oliviers.jpeg">
+                    <img class="carousel__photo" src="../assets/images/destinations/sur-la-plage.jpeg">
+                    <img class="carousel__photo" src="../assets/images/destinations/maya-beach-thailand.jpeg">
+                    <img class="carousel__photo" src="../assets/images/destinations/massage-on-water.webp">
         
                     <div class="carousel__button--next"></div>
                     <div class="carousel__button--prev"></div>
