--- a/pages/account.html
+++ b/pages/account.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/account.css">
-    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../styles/navigation.css">
     <link rel="stylesheet" href="../styles/footer.css">
     <script src="../scripts/account.js" defer></script>
-    <script src="../scripts/header.js" defer></script>
+    <script src="../scripts/navigation.js" defer></script>
     <script src="../scripts/footer.js" defer></script>
     <title>Roma | Compte utilisateur connecté</title>
 </head>
