--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/contact.css">
-    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../styles/navigation.css">
     <link rel="stylesheet" href="../styles/footer.css">
-    <script src="../scripts/header.js" defer></script>
+    <script src="../scripts/navigation.js" defer></script>
     <script src="../scripts/footer.js" defer></script>
     <title>Roma | Contact</title>
 </head>
