--- a/pages/products.html
+++ b/pages/products.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roma | produits pour chez vous</title>
     <link rel="stylesheet" href="../styles/products.css">
+    <link rel="stylesheet" href="../styles/navigation.css">
     <link rel="stylesheet" href="../styles/footer.css">
     <script src="../scripts/products.js" defer></script>
+    <script src="../scripts/navigation.js" defer></script>
     <script src="../scripts/footer.js" defer></script>
 </head>
 <body>
 
     <header>
-        <h2>Nos produits phares</h2>
+     
     </header>
 
     <main>
