--- a/pages/index.html
+++ b/pages/index.html
@@ -85,8 +85,11 @@
             <div class="carousel-wrapper">
                 <div class="carousel">
 
-                    <img class="carousel__photo initial" src="../assets/images/destinations/sous-les-oliviers.jpeg">
-                    
+                    <a href="index.html" class="carousel__photo initial">
+                    <img  src="../assets/images/destinations/sous-les-oliviers.jpeg">
+                    <p>voici le nom du lieu</p>
+                    </a>
+
                     <img class="carousel__photo" src="../assets/images/destinations/sur-la-plage.jpeg">
                     
                     <img class="carousel__photo" src="../assets/images/destinations/maya-beach-thailand.jpeg">
