--- a/pages/log-in.html
+++ b/pages/log-in.html
@@ -17,6 +17,9 @@
     <header></header>
 
     <main>
+
+        <h1>SIGN IN</h1>
+        
         <div class="container">
             <form id="signup" class="form">
     
