--- a/pages/log-in.html
+++ b/pages/log-in.html
@@ -18,7 +18,7 @@
 
     <main>
 
-        <h1>SIGN IN</h1>
+        <h1>SE CONNECTER</h1>
         
         <div class="container">
             <form id="signup" class="form">
