--- a/pages/products.html
+++ b/pages/products.html
@@ -20,7 +20,7 @@
 
     <main>
 
-        <h1>PRODUCTS</h1>
+        <h1>PRODUITS</h1>
         <!-- pricing list -->
         <div class="special-offer">
                 
